--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>Picole quebrado | home</title>
-  <link rel="shortcut icon" href="/favicon_io/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,36 +15,36 @@
 </head>
 
 <body style="position: relative;">
-  <a id="whats" href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.png" alt=""></a>
+  <a id="whats" href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.png" alt=""></a>
   <div class="top-dados-menu">
     <div class="dados-do-topo">
       <div class="icons">
-        <a href="https://www.instagram.com/picole_quebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
-        <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
-        <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
-        <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
+        <a href="https://www.instagram.com/picole_quebrado/"><img src="imgs/icones/instagram.svg" alt="" srcset="" /></a>
+        <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="imgs/icones/facebook.svg" alt="" srcset="" /></a>
+        <a href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+        <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="imgs/icones/youtube.svg" alt="" srcset="" /></a>
       </div>
       <div class="icons">
         <div class="local">
-          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="/imgs/icones/localizacao.svg" alt="" /></a>
+          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="imgs/icones/localizacao.svg" alt="" /></a>
           <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7">
             <p>onde estamos</p>
           </a>
         </div>
         <div class="email-topo">
-          <a href="mailto:picolequebradoskateboard@gmail.com"><img src="/imgs/icones/email.svg" alt="" /></a>
+          <a href="mailto:picolequebradoskateboard@gmail.com"><img src="imgs/icones/email.svg" alt="" /></a>
           <a href="mailto:picolequebradoskateboard@gmail.com">
             <p>picolequebradoskateboard@gmail.com</p>
           </a>
         </div>
         <div>
-          <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
+          <a href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.svg" alt="" /></a>
           <a href="tel:+5591982066009">
             <p>(91) 98206-6009</p>
           </a>
         </div>
         <div>
-          <a href="https://wa.me/+5594991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
+          <a href="https://wa.me/+5594991746944"><img src="imgs/icones/telefone.svg" alt="" /></a>
           <a href="tel:+5594991746944">
             <p>(94) 99174-6944</p>
           </a>
@@ -54,13 +54,13 @@
     <header class="menu">
       <nav>
         <div class="containerLogo">
-          <img class="logoTipo" src="/imgs/fotos/LOGO_PICOLE.png" alt="">
-          <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
+          <img class="logoTipo" src="imgs/fotos/LOGO_PICOLE.png" alt="">
+          <img src="imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
         </div>
         <ul>
-          <li><a href="/paginas/sobre.html">sobre</a></li>
-          <li><a href="/paginas/produtos.html">produtos</a></li>
-          <li><a href="/paginas/contato.html">contatos</a></li>
+          <li><a href="paginas/sobre.html">sobre</a></li>
+          <li><a href="paginas/produtos.html">produtos</a></li>
+          <li><a href="paginas/contato.html">contatos</a></li>
         </ul>
       </nav>
     </header>
@@ -68,30 +68,30 @@
   </div>
   <div data-slide="principal">
     <ul class="slide">
-      <li><img src="/imgs/fotos/gui-noseslide.jpg" alt="" /></li>
-      <li><img src="/imgs/produtos/bone/BONEBLACKRED.jpg" alt="" /></li>
+      <li><img src="imgs/fotos/gui-noseslide.jpg" alt="" /></li>
+      <li><img src="imgs/produtos/bone/BONEBLACKRED.jpg" alt="" /></li>
     </ul>
     <ul class="slide">
-      <li><img src="/imgs/fotos/latino-rock.jpg" alt="" /></li>
-      <li><img src="/imgs/fotos/graffity-colors.png" alt="" /></li>
+      <li><img src="imgs/fotos/latino-rock.jpg" alt="" /></li>
+      <li><img src="imgs/fotos/graffity-colors.png" alt="" /></li>
     </ul>
     <ul class="slide">
-      <li><img src="/imgs/fotos/robson-smith.jpg" alt="" /></li>
-      <li><img src="/imgs/fotos/graffiti-muro.png" alt="" /></li>
+      <li><img src="imgs/fotos/robson-smith.jpg" alt="" /></li>
+      <li><img src="imgs/fotos/graffiti-muro.png" alt="" /></li>
     </ul>
     <ul class="slide">
-      <li><img src="/imgs/fotos/nino.jpg" alt="" /></li>
-      <li><img src="/imgs/fotos/camuflado.png" alt="" /></li>
-      <li><img src="/imgs/fotos/visagem.jpg" alt="" /></li>
+      <li><img src="imgs/fotos/nino.jpg" alt="" /></li>
+      <li><img src="imgs/fotos/camuflado.png" alt="" /></li>
+      <li><img src="imgs/fotos/visagem.jpg" alt="" /></li>
     </ul>
   </div>
 
   <section class="lancamentos">
     <h1>NOVOS SHAPES LANÇADOS</h1>
     <div>
-      <img src="/imgs/produtos/shapes/graffiti.png" alt="" />
-      <img src="/imgs/produtos/shapes/camuflado.png" alt="" />
-      <img src="/imgs/produtos/shapes/MUROGRAFITTI.png" alt="" />
+      <img src="imgs/produtos/shapes/graffiti.png" alt="" />
+      <img src="imgs/produtos/shapes/camuflado.png" alt="" />
+      <img src="imgs/produtos/shapes/MUROGRAFITTI.png" alt="" />
     </div>
   </section>
   <section class="produtos">
@@ -99,7 +99,7 @@
     <div class="cards">
       <div class="shape cards-item">
         <h1>Picolé Quebrado</h1>
-        <img src="/imgs/produtos/shapes/camuflado.png" alt="" srcset="">
+        <img src="imgs/produtos/shapes/camuflado.png" alt="" srcset="">
         <div class="price">
           <p>maple</p>
           <span>R$ 220,00</span>
@@ -107,7 +107,7 @@
       </div>
       <div class="shape cards-item">
         <h1>Picolé Quebrado</h1>
-        <img src="/imgs/produtos/shapes/graffiti.png" alt="" srcset="">
+        <img src="imgs/produtos/shapes/graffiti.png" alt="" srcset="">
         <div class="price">
           <p>maple</p>
           <span>R$ 220,00</span>
@@ -115,7 +115,7 @@
       </div>
       <div class="shape cards-item">
         <h1>Picolé Quebrado</h1>
-        <img src="/imgs/produtos/shapes/MUROGRAFITTI.png" alt="" srcset="">
+        <img src="imgs/produtos/shapes/MUROGRAFITTI.png" alt="" srcset="">
         <div class="price">
           <p>maple</p>
           <span>R$ 220,00</span>
@@ -123,7 +123,7 @@
       </div>
       <div class="shape cards-item">
         <h1>Boné Picolé Quebrado</h1>
-        <img src="/imgs/produtos/bone/BONEBLACKRED.jpg" alt="" srcset="">
+        <img src="imgs/produtos/bone/BONEBLACKRED.jpg" alt="" srcset="">
         <div class="price">
           <p>telado</p>
           <span>R$ 45,90</span>
@@ -132,7 +132,7 @@
       
       <div class="shape cards-item">
         <h1>Anti Action</h1>
-        <img src="/imgs/produtos/shapes/anti2.jpg" alt="" srcset="">
+        <img src="imgs/produtos/shapes/anti2.jpg" alt="" srcset="">
         <div class="price">
           <p>marfim</p>
           <span>R$ 109,90</span>
@@ -140,7 +140,7 @@
       </div>
       <div class="truck cards-item">
         <h1>Parafuso de base</h1>
-        <img src="/imgs/produtos/parafuso/parafuso.jpg" alt="" srcset="">
+        <img src="imgs/produtos/parafuso/parafuso.jpg" alt="" srcset="">
         <div class="price">
           <p>com chave</p>
           <span>R$ 27,90</span>
@@ -149,7 +149,7 @@
       
       <div class="truck cards-item">
         <h1>Rolamento abec 9</h1>
-        <img src="/imgs/produtos/rolamento/abec9.jpg" alt="" srcset="">
+        <img src="imgs/produtos/rolamento/abec9.jpg" alt="" srcset="">
         <div class="price">
           <p>kit com 8</p>
           <span>R$ 45,90</span>
@@ -158,7 +158,7 @@
       </div>
       <div class="truck cards-item">
         <h1>Rolamento Bones Reds</h1>
-        <img src="/imgs/produtos/rolamento/bonesbill.jpg" alt="" srcset="">
+        <img src="imgs/produtos/rolamento/bonesbill.jpg" alt="" srcset="">
         <div class="price">
           <p>BIG BALLS</p>
           <span>R$ 145,90</span>
@@ -167,7 +167,7 @@
       </div>
       <div class="truck cards-item">
         <h1>Rolamento Bones Reds</h1>
-        <img src="/imgs/produtos/rolamento/bonesred.jpg" alt="" srcset="">
+        <img src="imgs/produtos/rolamento/bonesred.jpg" alt="" srcset="">
         <div class="price">
           <p>BONES REDS</p>
           <span>R$ 145,90</span>
@@ -176,7 +176,7 @@
       </div>
       <div class="truck cards-item">
         <h1>Rolamento Bones Super</h1>
-        <img src="/imgs/produtos/rolamento/bonessuper.jpg" alt="" srcset="">
+        <img src="imgs/produtos/rolamento/bonessuper.jpg" alt="" srcset="">
         <div class="price">
           <p>SUPER</p>
           <span>R$ 145,90</span>
@@ -185,7 +185,7 @@
       </div>
       <div class="truck cards-item">
         <h1>Rolamento Independent</h1>
-        <img src="/imgs/produtos/rolamento/independent.jpg" alt="" srcset="">
+        <img src="imgs/produtos/rolamento/independent.jpg" alt="" srcset="">
         <div class="price">
           <p>INDEPENDENT</p>
           <span>R$ 155,90</span>
@@ -193,7 +193,7 @@
       </div>
       <div class="truck cards-item">
         <h1>Rolamento Spitfire</h1>
-        <img src="/imgs/produtos/rolamento/spitfireclassics.png" alt="" srcset="">
+        <img src="imgs/produtos/rolamento/spitfireclassics.png" alt="" srcset="">
         <div class="price">
           <p>CLASSICS</p>
           <span>R$ 160,90</span>
@@ -201,7 +201,7 @@
       </div>
       <div class="truck cards-item">
         <h1>Lixa Nacional</h1>
-        <img src="/imgs/fotos/lixavinho.jpg" alt="" srcset="">
+        <img src="imgs/fotos/lixavinho.jpg" alt="" srcset="">
         <div class="price">
           <p>vinho</p>
           <span>R$ 30,00</span>
@@ -209,7 +209,7 @@
       </div>
       <div class="truck cards-item">
         <h1>Lixa Emborrachada</h1>
-        <img src="/imgs/fotos/lixavinho.jpg" alt="" srcset="">
+        <img src="imgs/fotos/lixavinho.jpg" alt="" srcset="">
         <div class="price">
           <p>vinho</p>
           <span>R$ 60,00</span>
@@ -223,27 +223,27 @@
         <div>
           <h3>INSTITUCIONAL</h3>
           <ul>
-            <li><a href="/paginas/sobre.html">Sobre a Empresa</a></li>
+            <li><a href="paginas/sobre.html">Sobre a Empresa</a></li>
             <li>Termos & Condições</li>
           </ul>
         </div>
         <div>
           <h3>DÚVIDAS?</h3>
           <ul>
-            <li><a href="/paginas/contato.html">Fale Conosco</a></li>
+            <li><a href="paginas/contato.html">Fale Conosco</a></li>
             <li>Política de Privacidade</li>
-            <li><a href="/paginas/contato.html">Trocas e Devoluções</a></li>
+            <li><a href="paginas/contato.html">Trocas e Devoluções</a></li>
           </ul>
           <div>
             <h3>ATENDIMENTO</h3>
             <ul>
-              <li><a href="/paginas/contato.html">Central de Atendimento</a></li>
+              <li><a href="paginas/contato.html">Central de Atendimento</a></li>
             </ul>
           </div>
         </div>
       </div>
       <div class="logo-endereco">
-        <img src="/imgs/fotos/picoleQuebradoLOGO (1).png" alt="" />
+        <img src="imgs/fotos/picoleQuebradoLOGO (1).png" alt="" />
         <ul class="endereco">
           <li>avenida fernandoguilhon, 173</li>
           <li>Mercado Municipal de Marituba</li>
@@ -256,16 +256,16 @@
         <ul class="midias-footer">
           <li>siga-nos</li>
           <li>
-            <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
+            <a href="https://www.instagram.com/picolequebrado/"><img src="imgs/icones/instagram.svg" alt="" srcset="" /></a>
           </li>
           <li>
-            <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
+            <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="imgs/icones/facebook.svg" alt="" srcset="" /></a>
           </li>
           <li>
-            <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+            <a href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
           </li>
           <li>
-            <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
+            <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="imgs/icones/youtube.svg" alt="" srcset="" /></a>
           </li>
         </ul>
       </div>
@@ -273,8 +273,8 @@
     <p class="direitos">© TODOS OS DIREITOS RESERVADOS A PICOLE QUEBRADO SKATEBOARD</p>
   </footer>
 
-  <script src="/javascript/simple-slide.js"></script>
-  <script src="/javascript/script.js"></script>
+  <script src="javascript/simple-slide.js"></script>
+  <script src="javascript/script.js"></script>
 </body>
 
 </html>
