--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -6,44 +6,44 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>Picole quebrado | contato</title>
-  <link rel="shortcut icon" href="/favicon_io/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=Lacquer&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-  <a id="whats" href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.png" alt=""></a>
+  <a id="whats" href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.png" alt=""></a>
   <div class="top-dados-menu">
     <div class="dados-do-topo">
       <div class="icons">
-        <a href="https://www.instagram.com/picole_quebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
-        <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
-        <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
-        <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
+        <a href="https://www.instagram.com/picole_quebrado/"><img src="imgs/icones/instagram.svg" alt="" srcset="" /></a>
+        <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="imgs/icones/facebook.svg" alt="" srcset="" /></a>
+        <a href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+        <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="imgs/icones/youtube.svg" alt="" srcset="" /></a>
       </div>
       <div class="icons">
         <div class="local">
-          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="/imgs/icones/localizacao.svg" alt="" /></a>
+          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="imgs/icones/localizacao.svg" alt="" /></a>
           <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7">
             <p>onde estamos</p>
           </a>
         </div>
         <div class="email-topo">
-          <a href="mailto:picolequebradoskateboard@gmail.com"><img src="/imgs/icones/email.svg" alt="" /></a>
+          <a href="mailto:picolequebradoskateboard@gmail.com"><img src="imgs/icones/email.svg" alt="" /></a>
           <a href="mailto:picolequebradoskateboard@gmail.com">
             <p>picolequebradoskateboard@gmail.com</p>
           </a>
         </div>
         <div>
-          <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
+          <a href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.svg" alt="" /></a>
           <a href="tel:+5591982066009">
             <p>(91) 98206-6009</p>
           </a>
         </div>
         <div>
-          <a href="https://wa.me/+5591991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
+          <a href="https://wa.me/+5591991746944"><img src="imgs/icones/telefone.svg" alt="" /></a>
           <a href="tel:+5594991746944">
             <p>(94) 99174-6944</p>
           </a>
@@ -53,13 +53,13 @@
     <header class="menu">
       <nav>
         <div class="containerLogo">
-          <img class="logoTipo" src="/imgs/fotos/LOGO_PICOLE.png" alt="">
-          <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
+          <img class="logoTipo" src="imgs/fotos/LOGO_PICOLE.png" alt="">
+          <img src="imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
         </div>
         <ul>
-          <li><a href="/index.html">home</a></li>
-          <li><a href="/paginas/sobre.html">sobre</a></li>
-          <li><a href="/paginas/produtos.html">produtos</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="paginas/sobre.html">sobre</a></li>
+          <li><a href="paginas/produtos.html">produtos</a></li>
         </ul>
       </nav>
     </header>
@@ -73,7 +73,7 @@
           <li>CEP: 67200-000</li>
           <li>TEL: (91) 98206-6009</li>
         </ul>
-        <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="/imgs/mapas/mapa.png" alt="" /></a>
+        <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="imgs/mapas/mapa.png" alt="" /></a>
       </div>
       <h3>Mande sua mensagem</h3>
     </section>
@@ -102,27 +102,27 @@
           <div>
             <h3>INSTITUCIONAL</h3>
             <ul>
-              <li><a href="/paginas/sobre.html">Sobre a Empresa</a></li>
+              <li><a href="paginas/sobre.html">Sobre a Empresa</a></li>
               <li>Termos & Condições</li>
             </ul>
           </div>
           <div>
             <h3>DÚVIDAS?</h3>
             <ul>
-              <li><a href="/paginas/contato.html">Fale Conosco</a></li>
+              <li><a href="paginas/contato.html">Fale Conosco</a></li>
               <li>Política de Privacidade</li>
-              <li><a href="/paginas/contato.html">Trocas e Devoluções</a></li>
+              <li><a href="paginas/contato.html">Trocas e Devoluções</a></li>
             </ul>
             <div>
               <h3>ATENDIMENTO</h3>
               <ul>
-                <li><a href="/paginas/contato.html">Central de Atendimento</a></li>
+                <li><a href="paginas/contato.html">Central de Atendimento</a></li>
               </ul>
             </div>
           </div>
         </div>
         <div class="logo-endereco">
-          <img src="/imgs/fotos/picoleQuebradoLOGO (1).png" alt="" />
+          <img src="imgs/fotos/picoleQuebradoLOGO (1).png" alt="" />
           <ul class="endereco">
             <li>avenida fernandoguilhon, 173</li>
             <li>Mercado Municipal de Marituba</li>
@@ -135,16 +135,16 @@
           <ul class="midias-footer">
             <li>siga-nos</li>
             <li>
-              <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
+              <a href="https://www.instagram.com/picolequebrado/"><img src="imgs/icones/instagram.svg" alt="" srcset="" /></a>
             </li>
             <li>
-              <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
+              <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="imgs/icones/facebook.svg" alt="" srcset="" /></a>
             </li>
             <li>
-              <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+              <a href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
             </li>
             <li>
-              <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
+              <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="imgs/icones/youtube.svg" alt="" srcset="" /></a>
             </li>
           </ul>
         </div>
