--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -6,44 +6,44 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>Picole quebrado | produto</title>
-  <link rel="shortcut icon" href="/favicon_io/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=Lacquer&display=swap" rel="stylesheet" />
 </head>
 
 <body>
-  <a id="whats" href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.png" alt=""></a>
+  <a id="whats" href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.png" alt=""></a>
   <div class="top-dados-menu">
     <div class="dados-do-topo">
       <div class="icons">
-        <a href="https://www.instagram.com/picole_quebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
-        <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
-        <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
-        <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
+        <a href="https://www.instagram.com/picole_quebrado/"><img src="imgs/icones/instagram.svg" alt="" srcset="" /></a>
+        <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="imgs/icones/facebook.svg" alt="" srcset="" /></a>
+        <a href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+        <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="imgs/icones/youtube.svg" alt="" srcset="" /></a>
       </div>
       <div class="icons">
         <div class="local">
-          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="/imgs/icones/localizacao.svg" alt="" /></a>
+          <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7"><img src="imgs/icones/localizacao.svg" alt="" /></a>
           <a href="https://goo.gl/maps/NNQZeAmCKe893hQv7">
             <p>onde estamos</p>
           </a>
         </div>
         <div class="email-topo">
-          <a href="mailto:picolequebradoskateboard@gmail.com"><img src="/imgs/icones/email.svg" alt="" /></a>
+          <a href="mailto:picolequebradoskateboard@gmail.com"><img src="imgs/icones/email.svg" alt="" /></a>
           <a href="mailto:picolequebradoskateboard@gmail.com">
             <p>picolequebradoskateboard@gmail.com</p>
           </a>
         </div>
         <div>
-          <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" /></a>
+          <a href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.svg" alt="" /></a>
           <a href="tel:+5591982066009">
             <p>(91) 98206-6009</p>
           </a>
         </div>
         <div>
-          <a href="https://wa.me/+5591991746944"><img src="/imgs/icones/telefone.svg" alt="" /></a>
+          <a href="https://wa.me/+5591991746944"><img src="imgs/icones/telefone.svg" alt="" /></a>
           <a href="tel:+5594991746944">
             <p>(94) 99174-6944</p>
           </a>
@@ -53,13 +53,13 @@
     <header class="menu">
       <nav>
         <div class="containerLogo">
-          <img class="logoTipo" src="/imgs/fotos/LOGO_PICOLE.png" alt="">
-          <img src="/imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
+          <img class="logoTipo" src="imgs/fotos/LOGO_PICOLE.png" alt="">
+          <img src="imgs/icones/Picole Quebrado skateboard.svg" alt="" srcset="" />
         </div>
         <ul>
-          <li><a href="/index.html">home</a></li>
-          <li><a href="/paginas/sobre.html">sobre</a></li>
-          <li><a href="/paginas/contato.html">contatos</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="paginas/sobre.html">sobre</a></li>
+          <li><a href="paginas/contato.html">contatos</a></li>
         </ul>
       </nav>
     </header>
@@ -68,7 +68,7 @@
       <div class="cards">
         <div class="shape cards-item">
           <h1>Picolé Quebrado</h1>
-          <img src="/imgs/produtos/shapes/camuflado.png" alt="" srcset="">
+          <img src="imgs/produtos/shapes/camuflado.png" alt="" srcset="">
           <div class="price">
             <p>maple</p>
             <span>R$ 220,00</span>
@@ -76,7 +76,7 @@
         </div>
         <div class="shape cards-item">
           <h1>Picolé Quebrado</h1>
-          <img src="/imgs/produtos/shapes/graffiti.png" alt="" srcset="">
+          <img src="imgs/produtos/shapes/graffiti.png" alt="" srcset="">
           <div class="price">
             <p>maple</p>
             <span>R$ 220,00</span>
@@ -84,7 +84,7 @@
         </div>
         <div class="shape cards-item">
           <h1>Picolé Quebrado</h1>
-          <img src="/imgs/produtos/shapes/MUROGRAFITTI.png" alt="" srcset="">
+          <img src="imgs/produtos/shapes/MUROGRAFITTI.png" alt="" srcset="">
           <div class="price">
             <p>maple</p>
             <span>R$ 220,00</span>
@@ -92,7 +92,7 @@
         </div>
         <div class="shape cards-item">
           <h1>Boné Picolé Quebrado</h1>
-          <img src="/imgs/produtos/bone/BONEBLACKRED.jpg" alt="" srcset="">
+          <img src="imgs/produtos/bone/BONEBLACKRED.jpg" alt="" srcset="">
           <div class="price">
             <p>telado</p>
             <span>R$ 45,90</span>
@@ -101,7 +101,7 @@
         
         <div class="shape cards-item">
           <h1>Anti Action</h1>
-          <img src="/imgs/produtos/shapes/anti2.jpg" alt="" srcset="">
+          <img src="imgs/produtos/shapes/anti2.jpg" alt="" srcset="">
           <div class="price">
             <p>marfim</p>
             <span>R$ 109,90</span>
@@ -109,7 +109,7 @@
         </div>
         <div class="truck cards-item">
           <h1>Parafuso de base</h1>
-          <img src="/imgs/produtos/parafuso/parafuso.jpg" alt="" srcset="">
+          <img src="imgs/produtos/parafuso/parafuso.jpg" alt="" srcset="">
           <div class="price">
             <p>com chave</p>
             <span>R$ 27,90</span>
@@ -118,7 +118,7 @@
         
         <div class="truck cards-item">
           <h1>Rolamento abec 9</h1>
-          <img src="/imgs/produtos/rolamento/abec9.jpg" alt="" srcset="">
+          <img src="imgs/produtos/rolamento/abec9.jpg" alt="" srcset="">
           <div class="price">
             <p>kit com 8</p>
             <span>R$ 45,90</span>
@@ -127,7 +127,7 @@
         </div>
         <div class="truck cards-item">
           <h1>Rolamento Bones Reds</h1>
-          <img src="/imgs/produtos/rolamento/bonesbill.jpg" alt="" srcset="">
+          <img src="imgs/produtos/rolamento/bonesbill.jpg" alt="" srcset="">
           <div class="price">
             <p>BIG BALLS</p>
             <span>R$ 145,90</span>
@@ -136,7 +136,7 @@
         </div>
         <div class="truck cards-item">
           <h1>Rolamento Bones Reds</h1>
-          <img src="/imgs/produtos/rolamento/bonesred.jpg" alt="" srcset="">
+          <img src="imgs/produtos/rolamento/bonesred.jpg" alt="" srcset="">
           <div class="price">
             <p>BONES REDS</p>
             <span>R$ 145,90</span>
@@ -145,7 +145,7 @@
         </div>
         <div class="truck cards-item">
           <h1>Rolamento Bones Super</h1>
-          <img src="/imgs/produtos/rolamento/bonessuper.jpg" alt="" srcset="">
+          <img src="imgs/produtos/rolamento/bonessuper.jpg" alt="" srcset="">
           <div class="price">
             <p>SUPER</p>
             <span>R$ 145,90</span>
@@ -154,7 +154,7 @@
         </div>
         <div class="truck cards-item">
           <h1>Rolamento Independent</h1>
-          <img src="/imgs/produtos/rolamento/independent.jpg" alt="" srcset="">
+          <img src="imgs/produtos/rolamento/independent.jpg" alt="" srcset="">
           <div class="price">
             <p>INDEPENDENT</p>
             <span>R$ 155,90</span>
@@ -162,7 +162,7 @@
         </div>
         <div class="truck cards-item">
           <h1>Rolamento Spitfire</h1>
-          <img src="/imgs/produtos/rolamento/spitfireclassics.png" alt="" srcset="">
+          <img src="imgs/produtos/rolamento/spitfireclassics.png" alt="" srcset="">
           <div class="price">
             <p>CLASSICS</p>
             <span>R$ 160,90</span>
@@ -170,7 +170,7 @@
         </div>
         <div class="truck cards-item">
           <h1>Lixa Nacional</h1>
-          <img src="/imgs/fotos/lixavinho.jpg" alt="" srcset="">
+          <img src="imgs/fotos/lixavinho.jpg" alt="" srcset="">
           <div class="price">
             <p>vinho</p>
             <span>R$ 30,00</span>
@@ -178,7 +178,7 @@
         </div>
         <div class="truck cards-item">
           <h1>Lixa Emborrachada</h1>
-          <img src="/imgs/fotos/lixavinho.jpg" alt="" srcset="">
+          <img src="imgs/fotos/lixavinho.jpg" alt="" srcset="">
           <div class="price">
             <p>vinho</p>
             <span>R$ 60,00</span>
@@ -191,27 +191,27 @@
           <div>
             <h3>INSTITUCIONAL</h3>
             <ul>
-              <li><a href="/paginas/sobre.html">Sobre a Empresa</a></li>
+              <li><a href="paginas/sobre.html">Sobre a Empresa</a></li>
               <li>Termos & Condições</li>
             </ul>
           </div>
           <div>
             <h3>DÚVIDAS?</h3>
             <ul>
-              <li><a href="/paginas/contato.html">Fale Conosco</a></li>
+              <li><a href="paginas/contato.html">Fale Conosco</a></li>
               <li>Política de Privacidade</li>
-              <li><a href="/paginas/contato.html">Trocas e Devoluções</a></li>
+              <li><a href="paginas/contato.html">Trocas e Devoluções</a></li>
             </ul>
             <div>
               <h3>ATENDIMENTO</h3>
               <ul>
-                <li><a href="/paginas/contato.html">Central de Atendimento</a></li>
+                <li><a href="paginas/contato.html">Central de Atendimento</a></li>
               </ul>
             </div>
           </div>
         </div>
         <div class="logo-endereco">
-          <img src="/imgs/fotos/picoleQuebradoLOGO (1).png" alt="" />
+          <img src="imgs/fotos/picoleQuebradoLOGO (1).png" alt="" />
           <ul class="endereco">
             <li>avenida fernandoguilhon, 173</li>
             <li>Mercado Municipal de Marituba</li>
@@ -224,16 +224,16 @@
           <ul class="midias-footer">
             <li>siga-nos</li>
             <li>
-              <a href="https://www.instagram.com/picolequebrado/"><img src="/imgs/icones/instagram.svg" alt="" srcset="" /></a>
+              <a href="https://www.instagram.com/picolequebrado/"><img src="imgs/icones/instagram.svg" alt="" srcset="" /></a>
             </li>
             <li>
-              <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="/imgs/icones/facebook.svg" alt="" srcset="" /></a>
+              <a href="https://www.facebook.com/profile.php?id=100073004153898"><img src="imgs/icones/facebook.svg" alt="" srcset="" /></a>
             </li>
             <li>
-              <a href="https://wa.me/+5591982066009"><img src="/imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
+              <a href="https://wa.me/+5591982066009"><img src="imgs/icones/whatsapp.svg" alt="" srcset="" /></a>
             </li>
             <li>
-              <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="/imgs/icones/youtube.svg" alt="" srcset="" /></a>
+              <a href="https://www.youtube.com/channel/UCOKhmVPwEKcYezYWuXluL6A"><img src="imgs/icones/youtube.svg" alt="" srcset="" /></a>
             </li>
           </ul>
         </div>
