--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -82,17 +82,17 @@
       <form class="form-Cliente" action="https://formsubmit.co/danielzamperlini.developer@gmail.com" method="POST">
         <input type="hidden" name="_next" value="https://danielzamperlini.github.io/sucesso.html" />
         <input type="hidden" name="_autoresponse" value="Recebemos sua mensagem, obrigado pelo contato e logo responderemos!" />
-        <label class="row-1" for="name">Nome</label>
-        <input class="email-input row-2" type="text" name="name" required />
-        <label class="row-1" for="email">Email</label>
-        <input class="row-2" type="email" name="email" required />
-        <label class="row-3" for="name">Telefone</label>
-        <input class="email-input row-4" type="number" name="number" required />
-        <label class="row-3" for="name">Assunto</label>
-        <input class="email-input row-4" type="text" name="name" required />
-        <label class="row-5" for="message">Mensagem</label>
-        <textarea class="row-6" name="message" placeholder="Escreva aqui sobre o motivo do seu contato" required></textarea>
-        <button class="botao row-7" type="submit">Enviar</button>
+        <label id="row-1" class="row-1" for="name">Nome</label>
+        <input id="row-2" class="email-input row-2" type="text" name="name" required />
+        <label id="row-3" class="row-1" for="email">Email</label>
+        <input id="row-4" class="row-2" type="email" name="email" required />
+        <label id="row-5" class="row-3" for="name">Telefone</label>
+        <input id="row-6" class="email-input row-4" type="number" name="number" required />
+        <label id="row-7" class="row-3" for="name">Assunto</label>
+        <input id="row-8" class="email-input row-4" type="text" name="name" required />
+        <label id="row-9" class="row-5" for="message">Mensagem</label>
+        <textarea id="row-10" class="row-6" name="message" placeholder="Escreva aqui sobre o motivo do seu contato" required></textarea>
+        <button id="row-11" class="botao row-7" type="submit">Enviar</button>
       </form>
     </section>
 
