--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
       <li><img src="imgs/fotos/graffiti-muro.png" alt="" /></li>
     </ul>
     <ul class="slide">
+      <li><img src="imgs/fotos/vitor.jpg" alt="" /></li>
+      <li><img src="imgs/produtos/rolamento/spitfireclassics.png" alt="" /></li>
+    </ul>
+    <ul class="slide">
       <li><img src="imgs/fotos/nino.jpg" alt="" /></li>
       <li><img src="imgs/fotos/camuflado.png" alt="" /></li>
       <li><img src="imgs/fotos/visagem.jpg" alt="" /></li>
@@ -201,7 +205,7 @@
       </div>
       <div class="truck cards-item">
         <h1>Lixa Nacional</h1>
-        <img src="imgs/fotos/lixavinho.jpg" alt="" srcset="">
+        <img src="imgs/produtos/lixa.webp" alt="" srcset="">
         <div class="price">
           <p>vinho</p>
           <span>R$ 30,00</span>
