--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -170,7 +170,7 @@
         </div>
         <div class="truck cards-item">
           <h1>Lixa Nacional</h1>
-          <img src="/imgs/fotos/lixavinho.jpg" alt="" srcset="">
+          <img src="/imgs/produtos/lixa.webp" alt="" srcset="">
           <div class="price">
             <p>vinho</p>
             <span>R$ 30,00</span>
