--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -172,7 +172,7 @@
           <h1>Lixa Nacional</h1>
           <img src="/imgs/produtos/lixa.webp" alt="" srcset="">
           <div class="price">
-            <p>vinho</p>
+            <p>nacional</p>
             <span>R$ 30,00</span>
           </div>
         </div>
